--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -16,5 +16,6 @@
 
         <h3>Hobbies:</h3>
         <p>I love crocheting and coding as well as cooking and swimming.</p>
+        <p>View my <a href="tweets.html" target="_blank">Tweets</a> page.</p>
     </body>
 </html>
