modified index and tweets file

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,21 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>My Portfolio</title>
-    </head>
-    <body>
+  <head>
+    <meta charset="UTF-8">
+    <title>My Portfolio</title>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="tweets.html">Tweets</a></li>
+      </ul>
+    </header>
+
+    <main>
+      <article>
         <h1>Raziyah's Portfolio</h1>
         <h2>About Me:</h2>
         <p>My name is raziyah Mwihaki Norah.</p>
         <p>I am an aspiring Web developer.</p>
         <p>I am currently an ALX student taking ALX Front-End Web Development.</p>
         <a href="https://alxafrica.com" target="_blank">
-            <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
+          <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
         </a>
-
         <h3>Hobbies:</h3>
         <p>I love crocheting and coding as well as cooking and swimming.</p>
         <p>View my <a href="tweets.html" target="_blank">Tweets</a> page.</p>
-    </body>
+      </article>
+
+      <aside>
+        <p>placeholder to add comment thread later</p>
+      </aside>
+    </main>
+
+    <footer>
+      <p>Made by Raziyah Mwihaki Norah - <a href="https://alxafrica.com" target="_blank">here</a>.</p>
+    </footer>
+  </body>
 </html>
