--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -22,9 +22,42 @@
         <a href="https://alxafrica.com" target="_blank">
           <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
         </a>
+
         <h3>Hobbies:</h3>
         <p>I love crocheting and coding as well as cooking and swimming.</p>
         <p>View my <a href="tweets.html" target="_blank">Tweets</a> page.</p>
+
+        <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canada</td>
+            </tr>
+            <tr>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
+            </tr>
+            <tr>
+              <td>Sophia</td>
+              <td>21</td>
+              <td>UK</td>
+            </tr>
+          </tbody>
+        </table>
       </article>
 
       <aside>
@@ -32,8 +65,6 @@
       </aside>
     </main>
 
-    <footer>
-      <p>Made by Raziyah Mwihaki Norah - <a href="https://alxafrica.com" target="_blank">here</a>.</p>
-    </footer>
+    <footer><p>Made by Raziyah Mwihaki Norah - <a href="https://alxafrica.com" target="_blank">here</a>.</p></footer>
   </body>
 </html>
