Fixed file structure of index.html of portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>My Portfolio Navigation</title>
+    <meta charset="utf-8">
+    <title>Raziyah Mwihaki Norah - Personal Portfolio</title>
   </head>
   <body>
-    <h1>Welcome to my Portfolio Navigation Page</h1>
-    <ul>
-      <li><a href="../html_basic/index.html">Go to HTML Basic Home Page</a></li>
-      <li><a href="../html_basic/tweets.html">Go to Tweets Page</a></li>
-    </ul>
+    <header>
+      <h1>Raziyah Mwihaki Norah</h1>
+      <p>Aspiring Web Developer | Passionate About Learning & Growth</p>
+    </header>
+
+    <nav>
+      <ul>
+        <li><a href="#introduction">Introduction</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <section id="introduction">
+      <h2>Introduction</h2>
+      <p>My name is Raziyah Mwihaki Norah. I am an aspiring web developer and a student at ALX learning Front-End Web Development. I'm passionate about technology, design, and creating impactful digital experiences.</p>
+    </section>
+
+    <section id="projects">
+      <h2>Projects</h2>
+
+      <article class="project">
+        <h3>My First Portfolio</h3>
+        <p>This is a simple portfolio webpage built using HTML only, showcasing my understanding of basic semantic structure.</p>
+        <a href="https://github.com/Raziyah77/My_First_Portfolio" target="_blank">View Project</a>
+      </article>
+
+      <article class="project">
+        <h3>Twitter Embed Page</h3>
+        <p>This page displays an embedded tweet as part of the HTML basic project.</p>
+        <a href="tweets.html" target="_blank">View Tweet Page</a>
+      </article>
+    </section>
+
+    <section id="about">
+      <h2>About Me</h2>
+      <p>I love crocheting, coding, and cooking. I'm passionate about creating beautiful, accessible websites and continuously growing my skill set.</p>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>
+        Email me at <a href="mailto:raziyah@example.com">raziyah@example.com</a><br>
+        <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a><br>
+        <a href="https://github.com/Raziyah77" target="_blank">GitHub</a>
+      </p>
+    </section>
+
+    <footer>
+      <p>&copy; 2024 Raziyah Mwihaki Norah</p>
+    </footer>
   </body>
 </html>
